# 7773-Final-Project

./: README.md  pyproject.toml
data/FOMC/statement/: FOMC_statement_1997-03-25.txt  FOMC_statement_2006-01-31.txt  FOMC_statement_2006-03-28.txt  FOMC_statement_2006-05-10.txt  FOMC_statement_2006-06-29.txt  FOMC_statement_2006-08-08.txt  FOMC_statement_2006-09-20.txt  FOMC_statement_2006-10-25.txt  FOMC_statement_2006-12-12.txt  FOMC_statement_2007-01-31.txt  FOMC_statement_2007-03-21.txt  FOMC_statement_2007-05-09.txt  FOMC_statement_2007-06-28.txt  FOMC_statement_2007-08-07.txt  FOMC_statement_2007-08-10.txt  FOMC_statement_2007-08-16.txt  FOMC_statement_2007-09-18.txt  FOMC_statement_2007-10-31.txt  FOMC_statement_2007-12-11.txt  FOMC_statement_2008-01-21.txt  FOMC_statement_2008-01-30.txt  FOMC_statement_2008-03-10.txt  FOMC_statement_2008-03-18.txt  FOMC_statement_2008-04-30.txt  FOMC_statement_2008-06-25.txt  FOMC_statement_2008-08-05.txt  (+129 more)
data/LoughranMcDonald/: Load_MD_Logfile.txt  MOD_Load_MasterDictionary_v2022.py  sentiment_dictionaries.pkl  test.ipynb
data/MarketData/: Predicting Fed Rate.csv  Predicting Fed Rate.xlsx  ~$Predicting Fed Rate.xlsx
data/preprocessed/: dataset_merged_with_sentiment.csv  statement.csv  statement_LM_sentiment.csv  test.csv  test2.csv
data/result/: statement_sentiment.csv
src/: 1_EDA_nontext.ipynb  2_EDA_text.ipynb  3_Sentiment_model.ipynb  4_RandomForest_model.ipynb  App.py  App_utils.py  CleanStatements.py  Flow.py  Flow_utils.py  FomcGetData.py
src/fomc_get_data/: FomcBase.py  FomcStatement.py
(+3228 files in other folders)
