[project]
name = "7773-final-project"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "“hy2776", email = "731471764@qq.com" }
]
dependencies = [
    "pandas>=2.0.3",
    "numpy>=1.24.4",
    "textract>=1.6.5",
    "requests>=2.31.0",
    "tqdm>=4.66.1",
    "nltk>=3.8.1",
    "quandl>=3.7.0",
    "scikit-plot>=0.3.7",
    "seaborn>=0.13.0",
    "torch>=2.1.1",
    "transformers>=4.35.0",
    "xgboost>=2.0.1",
    "scikit-learn>=1.3.2",
    "ipykernel>=6.26.0",
    "wordcloud>=1.9.2",
    "imblearn>=0.0",
    "tensorflow>=2.13.1",
    "metaflow>=2.10.8",
    "comet_ml>=3.35.4",
    "streamlit>=1.29.0",
    "pylint>=3.0.2",
    "bs4>=0.0.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.rye]
managed = true
dev-dependencies = []

[tool.poetry]
name = "7773-final-project"
version = "0.1.0"
description = "Add your description here"
authors = [
    "hy2776 <731471764@qq.com>"
]

